deployment/base/registry-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-backend
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: registry-backend
        image: sensrnetregistry.azurecr.io/sensrnet/registry-backend:latest
        ports:
        - name: http
          containerPort: 3000
        resources:
          requests:
            cpu: "500m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /api/health
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
