deployment/base/registry-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry-backend
  name: registry-backend
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: registry-backend
status:
  loadBalancer: {}
