deployment/base/registry-backend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-backend-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/preserve-host: "true"
    traefik.backend.loadbalancer.stickiness: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: registry-backend
          servicePort: 80
        path: /api/
